# Proteus-agent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  MODULAR_AGENT_SPEC_RU.md  README.md  agent.advanced.example.toml  agent.claude-pack.example.toml  agent.coding.example.toml  agent.example.toml  agent.provider.example.toml  codex.config.toml  config.example.json  install.sh  proteus.advanced.example.toml  proteus.codex.example.toml  proteus.coding.example.toml  proteus.dev-slim.example.toml  proteus.example.toml  proteus.external-tools.example.toml  proteus.mcp.example.toml  proteus.provider.example.toml
clients/inspector/: Cargo.toml  README.md  Trunk.toml  index.html
clients/inspector/src/: api.rs  app.rs  architecture.rs  architecture_map.rs  architecture_model.rs  configs.rs  main.rs  types.rs  ui_utils.rs
clients/inspector/src/configs/: builder.rs  module_config_editor.rs  summary.rs
clients/tui/: Cargo.toml
clients/tui/src/: app_loop.rs  bottom_pane.rs  cards.rs  commands.rs  config_summary.rs  driver.rs  history_insert.rs  inline_terminal.rs  input.rs  live_preview.rs  main.rs  markdown.rs  motion.rs  plan_intake.rs  profiles.rs  session_picker.rs  slash_commands.rs  state.rs  terminal_host.rs  terminal_surface.rs  transcript.rs  visual.rs
clients/tui/src/bottom_pane/: composer.rs  footer.rs  mod.rs  status.rs
clients/tui/src/codex/: main.rs
clients/tui/src/state/: context_report.rs  helpers.rs
clients/tui/src/visual/: overlay.rs  scrollback.rs
clients/web/: Cargo.toml  README.md  Trunk.toml  index.html  styles.css
clients/web/css/: components.css  layout.css  markdown.css  responsive.css  tokens.css
clients/web/src/: actions.rs  api.rs  app.rs  app_helpers.rs  app_keyboard.rs  app_resize.rs  app_sessions.rs  app_toasts.rs  architecture.rs  components.rs  events.rs  main.rs  markdown.rs  messages.rs  types.rs  ui_utils.rs
clients/web/src/components/: approval.rs  chat_results.rs  composer.rs  context_map.rs  controls.rs  message.rs  resume.rs  settings.rs  sidebar.rs  tool_activity.rs
clients/web/src/events/: runtime.rs  stream.rs
clients/web/src/types/: context.rs  control.rs  message.rs  protocol.rs  protocol_contract_tests.rs  requests.rs  session.rs  settings.rs  tool.rs
crates/agent-contracts/: Cargo.toml
crates/agent-contracts/src/: app_protocol.rs  lib.rs  plugin.rs  tool_support.rs
crates/agent-contracts/src/contracts/: approval_policy.rs  approval_transport.rs  context_builder.rs  event_sink.rs  history_compactor.rs  memory_store.rs  mod.rs  renderer.rs  search_backend.rs  tool.rs  tool_exposure.rs  user_input.rs  workflow.rs
crates/agent-contracts/src/domain/: context.rs  events.rs  memory.rs  mod.rs  model.rs  module_manifest.rs  patch.rs  tool.rs
crates/agent-contracts/src/model_standard/: canonical_request.rs  canonical_response.rs  capabilities.rs  content_part.rs  stream.rs
crates/modular-agent/: Cargo.toml
crates/modular-agent/src/: app_server.rs  cli_markdown.rs  lib.rs  main.rs
crates/modular-agent/src/adapters/: anthropic.rs  http_retry.rs  openai.rs  secrets.rs
crates/modular-agent/src/app_server/: protocol.rs  stdio.rs
crates/modular-agent/src/core/: config.rs  eval_report.rs  event_store.rs  mod.rs  model_service.rs  module_catalog.rs  plugin_loader.rs  registry.rs  runtime.rs  session_store.rs  tool_orchestrator.rs  user_input.rs
crates/modular-agent/src/modules/approval/: cache.rs  headless.rs
crates/modular-agent/src/modules/context/: mod.rs  plugin_adapter.rs  plugin_builder_adapter.rs  provider.rs  simple.rs
crates/modular-agent/src/modules/memory/: jsonl.rs  mod.rs  plugin_adapter.rs  policy.rs  sqlite.rs
crates/modular-agent/src/modules/model/: fake.rs  mod.rs  service.rs
crates/modular-agent/src/modules/patch/: direct.rs  mod.rs  plugin_adapter.rs
crates/modular-agent/src/modules/policy/: ask_write.rs  mod.rs  permission_mode.rs  plugin_adapter.rs
crates/modular-agent/src/modules/renderer/: plain.rs  statusline.rs
crates/modular-agent/src/plugin_adapters/: compactor.rs  mod.rs  tool.rs  tool_exposure.rs
crates/modular-agent/src/stubs/: all_visible_tool_exposure.rs  deny_all_policy.rs  fake_model.rs  mod.rs  text_renderer.rs
crates/modular-agent/src/tools/: configured.rs  mod.rs  provider.rs  request_user_input.rs  search.rs
crates/modular-agent/tests/: module_swap.rs
crates/proteus-core/: Cargo.toml
crates/proteus-core/src/: app_server.rs  cli_commands.rs  cli_doctor.rs  cli_init.rs  lib.rs  main.rs  main_tests.rs
crates/proteus-core/src/adapters/: anthropic.rs  http_retry.rs  mod.rs  openai.rs  secrets.rs
crates/proteus-core/src/app_server/: approval_preview.rs  config_builder.rs  config_summary.rs  context_map.rs  http.rs  path_utils.rs  protocol.rs  stdio.rs  tests.rs  transcript.rs
crates/proteus-core/src/core/: config.rs  context_provider.rs  eval_report.rs  event_store.rs  mod.rs  model_service.rs  module_catalog.rs  permission_mode.rs  plugin_loader.rs  process_output.rs  registry.rs  runtime.rs  session_store.rs  tool_orchestrator.rs  topology.rs  topology_render.rs
crates/proteus-core/src/plugin_adapters/: compactor.rs  tool.rs  tool_exposure.rs
crates/proteus-core/src/stubs/: dynamic_tool_exposure.rs  empty_context.rs  fake_model.rs  mod.rs  no_compactor.rs  no_memory.rs  no_memory_policy.rs  no_workflow.rs  null_patch.rs  text_renderer.rs
crates/proteus-core/src/tools/: configured.rs  mod.rs  patch.rs  provider.rs  request_user_input.rs  search.rs
crates/proteus-core/tests/: module_swap.rs
docs/: goal.md  (+24 more)
plugins/context-pack/: Cargo.toml  plugin.toml
plugins/context-pack/src/: lib.rs
plugins/default/file-tools/: Cargo.toml  plugin.toml
plugins/default/file-tools/src/: find.rs  lib.rs  list.rs  read.rs  read_many.rs  search.rs  util.rs  write.rs
plugins/default/tool-output-artifacts/: Cargo.toml  plugin.toml
plugins/default/tool-output-artifacts/src/: lib.rs
plugins/policy-pack/: Cargo.toml  plugin.toml
plugins/policy-pack/src/: lib.rs
plugins/sqlite-memory/: Cargo.toml  plugin.toml
plugins/sqlite-memory/src/: lib.rs
(+369 files in other folders)
