[workspace]
resolver = "2"
members = [
    "crates/agent-contracts",
    "crates/modular-agent",
    "clients/tui",
    "plugins/default/hello-renderer",
    "plugins/default/hello-tool",
    "plugins/default/file-tools",
    "plugins/default/git-tools",
    "plugins/default/hello-policy-patch",
    "plugins/default/sqlite-memory",
    "plugins/default/shell-tool",
    "plugins/default/rg-search",
    "plugins/default/direct-patch",
    "plugins/default/coding-workflow",
    "plugins/default/context-pack",
    "plugins/default/memory-pack",
    "plugins/default/policy-pack",
    "plugins/default/renderer-pack",
    "plugins/default/tool-output-artifacts",
]
exclude = [
    "plugins/claude_pack",
]
