[workspace]
resolver = "2"
exclude = [
    "clients/web",
    "clients/inspector",
    "plugins/research/tool-output-artifacts",
]
members = [
    "crates/proteus-contracts",
    "crates/proteus-core",
    "plugins/default/file-tools",
    "plugins/default/git-tools",
    "plugins/default/sqlite-memory",
    "plugins/default/shell-tool",
    "plugins/default/rg-search",
    "plugins/default/direct-patch",
    "plugins/default/coding-workflow",
    "plugins/default/context-pack",
    "plugins/default/codex-compactor",
    "plugins/default/codex-tool-exposure",
    "plugins/default/memory-pack",
    "plugins/default/policy-pack",
    "plugins/default/renderer-pack",
]
