[package]
name = "proteus-inspector"
version = "0.1.0"
edition = "2024"
publish = false
description = "Separate Leptos inspector client for Proteus config and architecture views"

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8.19", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "EventTarget",
    "Headers",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Location",
    "MouseEvent",
    "Navigator",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "WheelEvent",
    "Window",
] }
