[package]
name = "proteus-tui"
version = "0.1.0"
edition = "2024"
publish = false
description = "Terminal UI client for proteus-core over AppServer stdio"

[[bin]]
name = "proteus-tui"
path = "src/main.rs"

[dependencies]
proteus-contracts = { path = "../../crates/proteus-contracts" }
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
