[package]
name = "proteus-web"
version = "0.1.0"
edition = "2024"
publish = false
description = "Leptos web client for Proteus"

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8.19", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Event",
    "EventSource",
    "EventTarget",
    "Headers",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Location",
    "MessageEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "SubmitEvent",
    "Window",
] }
