[package]
name = "agent-contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
abi_stable = "0.11"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
