[package]
name = "modular-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-contracts = { path = "../agent-contracts" }
libloading = "0.8"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
async-stream = "0.3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
coding-workflow = { path = "../../plugins/coding-workflow" }
context-pack = { path = "../../plugins/context-pack", default-features = false }
memory-pack = { path = "../../plugins/memory-pack", default-features = false }
policy-pack = { path = "../../plugins/policy-pack", default-features = false }
renderer-pack = { path = "../../plugins/renderer-pack", default-features = false }
tempfile = "3"
