[package]
name = "proteus-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proteus"
path = "src/main.rs"

[dependencies]
proteus-contracts = { path = "../proteus-contracts" }
libloading = "0.8"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
async-stream = "0.3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
coding-workflow = { path = "../../plugins/default/coding-workflow" }
context-pack = { path = "../../plugins/default/context-pack", default-features = false }
memory-pack = { path = "../../plugins/default/memory-pack", default-features = false }
policy-pack = { path = "../../plugins/default/policy-pack", default-features = false }
renderer-pack = { path = "../../plugins/default/renderer-pack", default-features = false }
tempfile = "3"
