[package]
name = "context-pack"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
plugin-entrypoint = []

[dependencies]
abi_stable = "0.11"
agent-contracts = { path = "../../crates/agent-contracts" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
