[package]
name = "tool-output-artifacts"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
proteus-contracts = { path = "../../../crates/proteus-contracts" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt"] }

[dev-dependencies]
tempfile = "3"
